# system_breakdown

./: README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/src/: app.dart
lib/src/features/cpu/data/: util.dart
lib/src/features/cpu/presentation/: cpu.dart
lib/src/features/landing_page/presentation/: landing_page.dart
lib/src/features/processes/domain/: crow.dart  header.dart  header_cell.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: cpu.dart  process.dart  ram.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/: Podfile
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml  build.rs
rust/src/: frb_generated.rs  main.rs
rust/src/api/: cpu.rs  mod.rs  process.rs  ram.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_system_breakdown.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_system_breakdown.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+3 files in other folders)
