[package]
name = "rust_lib_system_breakdown"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
cpu_info = "0.1.0"
cpufeatures = "0.3.0"
flutter_rust_bridge = "=2.12.0"
hwlocality = { version = "1.0.0-alpha.12", features = ["hwloc-2_1_0", "vendored"] }
log = "0.4.29"
sysinfo = "0.39.1"
